Correction url, porfolio, font https

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ age: true
 			<p>J'ai <span id="age"></span> ans et je suis un passionné de développement.</p>
 			<p>J'affectionne tout particulièrement le Framework .NET <br/> et les dernières technologies web.</p>
 			<a href="CV_MAXIME_RICHARD.pdf" target="_blank">Curriculum vitæ</a>
-			<a href="/Blog">Blog</a>
+			<a href="/blog">Blog</a>
 		</div>
 	</div>
 </section>
