url 404 retourne vers le blog

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ Whoops, la page que tu visites n'existe pas.
 </p>
 
 <p>
-  <b><a href="/Blog/" title="Blog">Visite le  blog</a></b> pour retrouver les nouveaux contenu.
+  <b><a href="/blog/" title="Blog">Visite le  blog</a></b> pour retrouver les nouveaux contenu.
 </p>
 
 <div class="tags"> 
