Design Texte page principale Ajout image pour partage Twitter / Facebook

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ age: true
 			<h1>Actuellement</h1>
 			<div id="article">
 				<p>
-					En ce moment, je travaille sur <b>Nancy</b> chez <a href="http://www.kalidea-ce.com/" target="_blank">Kalidea</a> depuis
-					deux ans. Je fais partie d'une équipe qui développe une solution web pour la gestion des comités d'entreprise.
+					Après deux années passées sur <b>Paris</b>, je travaille depuis début 2014 à <b>Nancy</b> chez <a href="http://www.kalidea-ce.com/" target="_blank">Kalidea</a>. J'évolue au sein d'une équipe qui développe une solution web destinée à la gestion des comités d'entreprise.
+					Je contribue à plusieurs projets Open Source et j'en suis également certains, vous pouvez retrouver une liste exhaustive sur mon <a href="https://zyhou.github.io/portfolio.html" target="_blank">portfolio</a> et aussi sur <a href="https://github.com/zyhou/" target="_blank">GitHub</a>.
 				</p>
-				<p>Je suis intéressé par un poste dans les alentours de <b>Nancy/Metz</b>, toujours dans le domaine du développement <b>Logiciel/Web</b>.</p>
+				<p>Intéressé par un poste dans les alentours de <b>Nancy/Metz</b>, toujours dans le domaine du développement <b>Logiciel/Web</b>.</p>
 			</div>
 		</div>
 	</div>
