Ajout de lien Correction orthographe

--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@ header: true
 ---
 
 <p>
-Whoops, la page que tu visites n'existe pas.
+Oups, la page que tu visites n'existe pas.
 </p>
 
 <p>
-  <b><a href="/blog/" title="Blog">Visite le  blog</a></b> pour retrouver les nouveaux contenus.
+  <b><a href="/blog/" title="Blog">Visite le blog</a></b> pour retrouver les nouveaux contenus.
 </p>
 
 <div class="tags"> 
