--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ age: true
 	<div class="container">
 		<div id="bienvenu">
 			<h1>Je m'appelle <b>Maxime</b>.</h1>
-			<p>J'ai <span id="age"></span> ans et je suis un passionné de développement.</p>
+			<p>J'ai <span id="age"></span> ans et suis un passionné de développement.</p>
 			<p>J'affectionne tout particulièrement le Framework .NET <br/> et les dernières technologies web.</p>
 			<a href="CV_MAXIME_RICHARD.pdf" target="_blank">Curriculum vitæ</a>
 			<a href="/blog">Blog</a>
@@ -22,7 +22,7 @@ age: true
 			<div id="article">
 				<p>
 					Après deux années passées sur <b>Paris</b>, je travaille depuis début 2014 à <b>Nancy</b> chez <a href="http://www.kalidea-ce.com/" target="_blank">Kalidea</a>. J'évolue au sein d'une équipe qui développe une solution web destinée à la gestion des comités d'entreprise.
-					Je contribue à plusieurs projets Open Source et j'en suis également certains, vous pouvez retrouver une liste exhaustive sur mon <a href="https://zyhou.github.io/portfolio.html" target="_blank">portfolio</a> et aussi sur <a href="https://github.com/zyhou/" target="_blank">GitHub</a>.
+					Je contribue à plusieurs projets Open Source et en suis également certains, vous pouvez retrouver une liste exhaustive sur mon <a href="https://zyhou.github.io/portfolio.html" target="_blank">portfolio</a> et aussi sur <a href="https://github.com/zyhou/" target="_blank">GitHub</a>.
 				</p>
 				<p>Intéressé par un poste dans les alentours de <b>Nancy/Metz</b>, toujours dans le domaine du développement <b>Logiciel/Web</b>.</p>
 			</div>
