--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <header>
         <div class="container">
             <h3 id="logo">
-                <a href="./">Maxime Richard</a>
+                <a href="./index.html">Maxime Richard</a>
             </h3>
             <nav>
                 <ul id="menu">
