review presentation part

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Language" content="fr-FR">
     <title>Maxime Richard - Nancy</title>
-    <meta name="description" content="Maxime Richard, développeur .NET et Web sur Nancy">
-    <meta name="keywords" content="Maxime Richard, Nancy, .NET, C#, Web, React, ReactJS">
+    <meta name="description" content="Maxime Richard, développeur React, Node sur Nancy">
+    <meta name="keywords" content="Maxime Richard, Nancy, Web, React, Node">
     <meta name="author" content="Maxime Richard">
     <meta name="copyright" content="Maxime Richard">
     <meta name="HandheldFriendly" content="True">
@@ -22,14 +22,14 @@
     <meta name="twitter:site" content="@choukmax" />
     <meta name="twitter:creator" content="@choukmax" />
     <meta name="twitter:title" content="Maxime Richard" />
-    <meta name="twitter:description" content="Maxime Richard, développeur .NET et Web sur Nancy" />
+    <meta name="twitter:description" content="Maxime Richard, développeur React, Node sur Nancy" />
     <meta name="twitter:image" content="./images/card.jpg" />
     <meta name="twitter:url" content="https://zyhou.github.io/" />
 
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Maxime Richard" />
-    <meta property="og:description" content="Maxime Richard, développeur .NET et Web sur Nancy" />
+    <meta property="og:description" content="Maxime Richard, développeur React, Node sur Nancy" />
     <meta property="og:image" content="./images/card.jpg" />
     <meta property="og:url" content="https://zyhou.github.io/" />
 
@@ -87,8 +87,8 @@
                     <b>Maxime</b>.</h1>
                 <p>J'ai
                     <span id="age"></span> ans et suis un passionné de développement.</p>
-                <p>J'affectionne tout particulièrement le Framework .NET
-                    <br/> et les dernières technologies web.</p>
+                <p>J'affectionne tout particulièrement React
+                    <br/> et les dernières technologies Open source.</p>
                 <a href="./CV_MAXIME_RICHARD.pdf" target="_blank">Curriculum vitæ</a>
             </div>
         </div>
@@ -100,8 +100,10 @@
                 <h1>Actuellement</h1>
                 <div id="article">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque quam totam quod vel nemo corrupti mollitia est iure ab
-                        debitis possimus sapiente assumenda, autem distinctio. Fugit dolorum suscipit voluptates!
+                        Après cinq années passées au sein de diverses entreprises, je travaille depuis début 2017 à
+                        <b>Nancy</b> chez
+                        <a href="https://marmelab.com/" target="_blank">Marmelab</a>. Je contribue à plusieurs projets Open Source, vous pouvez me retrouver sur
+                        <a href="https://github.com/zyhou/" target="_blank">GitHub</a>.
                     </p>
                 </div>
             </div>
