--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <b>Maxime</b>.</h1>
                 <p>J'ai
                     <span id="age"></span> ans et suis un passionné de développement.</p>
-                <p>J'affectionne tout particulièrement React
+                <p>J'apprecie tout particulièrement React
                     <br/> et les dernières technologies Open source.</p>
                 <a href="./CV_MAXIME_RICHARD.pdf" target="_blank">Curriculum vitæ</a>
             </div>
@@ -100,10 +100,19 @@
                 <h1>Actuellement</h1>
                 <div id="article">
                     <p>
-                        Après cinq années passées au sein de diverses entreprises, je travaille depuis début 2017 à
-                        <b>Nancy</b> chez
-                        <a href="https://marmelab.com/" target="_blank">Marmelab</a>. Je contribue à plusieurs projets Open Source, vous pouvez me retrouver sur
-                        <a href="https://github.com/zyhou/" target="_blank">GitHub</a>.
+                        Après deux années passées sur
+                        <b>Paris</b> et trois autres dans une entreprise
+                        <b>Nancéienne</b>, je travaille depuis janvier 2017 chez
+                        <a href="https://marmelab.com/" target="_blank">Marmelab</a> à
+                        <b>Nancy</b>. J'évolue au sein d'une équipe qui développe des solutions web et mobile. Je contribue
+                        à plusieurs projets Open Source, vous pouvez retrouver une liste exhaustive
+                        sur mon
+                        <a href="https://github.com/zyhou/" target="_blank">GitHub</a> ansi que celui de
+                        <a href="https://github.com/marmelab/" target="_blank">Marmelab</a>.
+                    </p>
+                    <p>
+                        Intéressé par les entreprises qui proposent de l'Open source dans les alentours de
+                        <b>Nancy</b>.
                     </p>
                 </div>
             </div>
