--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <a href="./index.html" class="liens_niveau1 active-link" id="link-accueil">Accueil</a>
                         </li>
                         <li>
-                            <a href="mailto:richard.maxime9@gmail.com">
+                            <a href="mailto:me@maximerichard.dev">
                                 <i class="fa fa-envelope"></i>
                             </a>
                         </li>
@@ -87,7 +87,6 @@
                         J'apprecie tout particulièrement React <br />
                         et les dernières technologies Open source.
                     </p>
-                    <a href="./CV_MAXIME_RICHARD.pdf" target="_blank">Curriculum vitæ</a>
                 </div>
             </div>
         </section>
@@ -121,11 +120,11 @@
             <div class="container">
                 <div id="div_mail">
                     <h2>Contact</h2>
-                    <a href="mailto:richard.maxime9@gmail.com"> <i class="fa fa-envelope"></i>Contact par mail</a>
+                    <a href="mailto:me@maximerichard.dev"> <i class="fa fa-envelope"></i>Contact par mail</a>
                     <p><i class="fa fa-map-marker"></i>Nancy</p>
                 </div>
                 <div id="div_social">
-                    <a href="https://twitter.com/choukmax" target="_blank" title="choukmax sur Twitter">
+                    <a href="https://twitter.com/rmaximedev" target="_blank" title="rmaximedev sur Twitter">
                         <i class="fa fa-twitter icones_social"></i>
                     </a>
                     <a href="https://github.com/zyhou" target="_blank" title="zyhou sur Github">
@@ -149,11 +148,11 @@
         </script>
 
         <script>
-            (function(i, s, o, g, r, a, m) {
+            (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
                 (i[r] =
                     i[r] ||
-                    function() {
+                    function () {
                         (i[r].q = i[r].q || []).push(arguments);
                     }),
                     (i[r].l = 1 * new Date());
